crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__cr_eof_after_doctype_name.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<!doctype html \n\"####)"
---
[
    Token {
        data: "doctype html \n",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
