crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__dbl_quote_after_ampersand_in_single_hyphen_quoted_attribute_value.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<z z='&\"'>\"####)"
---
[
    Token {
        data: "z",
        attrs: Some(
            UniCaseBTreeMap {
                inner: {
                    "z": Some(
                        (
                            "&\"",
                            Single,
                        ),
                    ),
                },
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "z",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
